Bounded Users and FilmsRatings. Users gets without all their FilmsRatings but the api to get them was created. FilmsRatings return with user.

--- a/WebApplicationDesign/src/main/resources/application.properties
+++ b/WebApplicationDesign/src/main/resources/application.properties
@@ -1,11 +1,11 @@
 spring.application.name=WebApplicationDesign
 server.port=8080
 
-spring.datasource.url=${POSTGRES_URL}
-spring.datasource.username=${POSTGRES_USERNAME}
-spring.datasource.password=${POSTGRES_PASSWORD}
+spring.datasource.url=${POSTGRES_URL:jdbc:postgresql://localhost:5432/postgres-db}
+spring.datasource.username=${POSTGRES_USERNAME:postgres}
+spring.datasource.password=${POSTGRES_PASSWORD:postgres}
 spring.datasource.driver-class-name=org.postgresql.Driver
 
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.jdbc.time_zone=UTC
-spring.jpa.open-in-view=false
+spring.jpa.open-in-view=true
