--- a/WebApplicationDesign/src/main/resources/application.properties
+++ b/WebApplicationDesign/src/main/resources/application.properties
@@ -6,6 +6,6 @@ spring.datasource.username=${POSTGRES_USERNAME:postgres}
 spring.datasource.password=${POSTGRES_PASSWORD:postgres}
 spring.datasource.driver-class-name=org.postgresql.Driver
 
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=create
 spring.jpa.properties.hibernate.jdbc.time_zone=UTC
 spring.jpa.open-in-view=true
