--- a/WebApplicationDesign/src/main/resources/application.properties
+++ b/WebApplicationDesign/src/main/resources/application.properties
@@ -1,11 +1,13 @@
 spring.application.name=WebApplicationDesign
 server.port=8080
+server.error.include-message=always
+server.error.include-binding-errors=always
 
 spring.datasource.url=${POSTGRES_URL:jdbc:postgresql://localhost:5432/postgres-db}
 spring.datasource.username=${POSTGRES_USERNAME:postgres}
 spring.datasource.password=${POSTGRES_PASSWORD:postgres}
 spring.datasource.driver-class-name=org.postgresql.Driver
 
-spring.jpa.hibernate.ddl-auto=create
+spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.jdbc.time_zone=UTC
 spring.jpa.open-in-view=true
