--- a/WebApplicationDesign/src/main/resources/application.properties
+++ b/WebApplicationDesign/src/main/resources/application.properties
@@ -11,3 +11,5 @@ spring.datasource.driver-class-name=org.postgresql.Driver
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.jdbc.time_zone=UTC
 spring.jpa.open-in-view=true
+
+com.example.design.config.secret=mySuperSecretKeyForJwtTokens1234567890
