Add the refresh token that is needed to refresh the access token that last 10 minutes. Moved login and register to AuthController.java .

--- a/WebApplicationDesign/src/main/resources/application.properties
+++ b/WebApplicationDesign/src/main/resources/application.properties
@@ -13,3 +13,5 @@ spring.jpa.properties.hibernate.jdbc.time_zone=UTC
 spring.jpa.open-in-view=true
 
 com.example.design.config.secret=mySuperSecretKeyForJwtTokens1234567890
+com.example.design.config.jwt.access-expiration=600000
+com.example.design.config.jwt.refresh-expiration=86400000
