--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -22,3 +22,7 @@ services:
       POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
     ports:
       - "5432:5432"
+    volumes:
+        - postgres-data:/var/lib/postgresql/data
+volumes:
+  postgres-data:
