--- a/WebApplicationDesign/src/main/resources/application.properties
+++ b/WebApplicationDesign/src/main/resources/application.properties
@@ -15,3 +15,13 @@ spring.jpa.open-in-view=true
 com.example.design.config.secret=mySuperSecretKeyForJwtTokens1234567890
 com.example.design.config.jwt.access-expiration=600000
 com.example.design.config.jwt.refresh-expiration=86400000
+stripe.secret.key=${STRIPE_SECRET_KEY}
+stripe.webhook.secret=${STRIPE_WEBHOOK_SECRET}
+
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=${MAIL_USER_NAME}
+spring.mail.password=${MAIL_PASSWORD}
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
+spring.mail.from=${MAIL_USER_NAME}
